# safe_alloc

./: CMakeLists.txt  LICENSE.txt  README.md  cmake_uninstall.cmake.in  public-key.asc  safe_alloc.sig
source/: safe_alloc
try/: main.cpp  safe_alloc
